chore: setup repository configuration for CI and releases (#2)

--- a/samples/snippets/pom.xml
+++ b/samples/snippets/pom.xml
@@ -16,12 +16,13 @@
         <groupId>com.google.cloud.samples</groupId>
         <artifactId>shared-configuration</artifactId>
         <version>1.2.2</version>
-        <relativePath/>
+        <relativePath></relativePath>
     </parent>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.javadoc.skip>true</maven.javadoc.skip>
     </properties>
 
     <dependencies>
@@ -34,22 +35,7 @@
             <groupId>org.apache.cassandra</groupId>
             <artifactId>java-driver-core</artifactId>
             <version>4.19.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.auth</groupId>
-            <artifactId>google-auth-library-credentials</artifactId>
-            <version>1.33.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.auth</groupId>
-            <artifactId>google-auth-library-oauth2-http</artifactId>
-            <version>1.33.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.protobuf</groupId>
-            <artifactId>protobuf-java</artifactId>
-            <version>4.30.0</version>
-        </dependency>
+        </dependency>    
     </dependencies>
 
     <build>
