--- a/google-cloud-spanner-cassandra/pom.xml
+++ b/google-cloud-spanner-cassandra/pom.xml
@@ -7,17 +7,12 @@
     <groupId>com.google.cloud</groupId>
     <artifactId>google-cloud-spanner-cassandra</artifactId>
     <packaging>jar</packaging>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version><!-- {x-version-update:google-cloud-spanner-cassandra:current} -->
     <parent>
         <groupId>com.google.cloud</groupId>
         <artifactId>google-cloud-spanner-cassandra-parent</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.1.0-SNAPSHOT</version><!-- {x-version-update:google-cloud-spanner-cassandra:current} -->
     </parent>
-
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -55,7 +50,12 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
+            <artifactId>mockito-inline</artifactId>
+            <scope>test</scope>
+        </dependency>        
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
