chore: Setup basic integration test (#34)
* chore: Setup basic integration test

* chore: Address review comments

* chore: Add DDL generation logic to avoid having to write separate DDLs for Cassandra and Spanner

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -133,7 +133,11 @@ jobs:
       with:
         distribution: temurin
         java-version: ${{matrix.java}}
+    - uses: 'google-github-actions/auth@v2'
+      with:
+        credentials_json: '${{ secrets.SPANNER_CASSANDRA_ADAPTER_CICD_SERVICE_ACCOUNT }}'
     - run: java -version
     - run: .kokoro/build.sh
       env:
         JOB_TYPE: integration
+        INTEGRATION_TEST_INSTANCE: ${{secrets.INTEGRATION_TEST_INSTANCE}}
