--- a/pom.xml
+++ b/pom.xml
@@ -101,12 +101,18 @@
                 <version>1.4.4</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>com.google.cloud</groupId>
+                <artifactId>google-cloud-spanner-cassandra</artifactId>
+                <version>0.3.1-SNAPSHOT</version> <!-- {x-version-update:google-cloud-spanner-cassandra:current} -->
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <modules>
         <module>google-cloud-spanner-cassandra</module>
         <module>spanner-cassandra-launcher</module>
+        <module>integration-tests</module>
     </modules>
 
     <build>
