--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -122,22 +122,5 @@ jobs:
       env:
         JOB_TYPE: clirr
   integration:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        java: [11]
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-java@v4
-      with:
-        distribution: temurin
-        java-version: ${{matrix.java}}
-    - uses: 'google-github-actions/auth@v2'
-      with:
-        credentials_json: '${{ secrets.SPANNER_CASSANDRA_ADAPTER_CICD_SERVICE_ACCOUNT }}'
-    - run: java -version
-    - run: .kokoro/build.sh
-      env:
-        JOB_TYPE: integration
-        INTEGRATION_TEST_INSTANCE: ${{secrets.INTEGRATION_TEST_INSTANCE}}
+    uses: ./.github/workflows/integration-tests.yml
+    secrets: inherit 
