chore: Add more integration tests (#36)

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -58,7 +58,13 @@
             <artifactId>cassandra</artifactId>
             <version>1.21.0</version>
             <scope>test</scope>
-        </dependency>                   
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.27.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>    
