--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,14 @@
           </links>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>com.spotify.fmt</groupId>
+        <artifactId>fmt-maven-plugin</artifactId>
+        <version>2.27</version>
+        <configuration>
+          <style>google</style>
+        </configuration>
+      </plugin>
     </plugins>
   </reporting>
 </project>
