--- a/google-cloud-spanner-cassandra/pom.xml
+++ b/google-cloud-spanner-cassandra/pom.xml
@@ -34,6 +34,11 @@
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
+            <artifactId>grpc-rls</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.grpc</groupId>
             <artifactId>grpc-auth</artifactId>
         </dependency>
         <dependency>
