chore: Minor IT fixes (#147)

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -42,6 +42,9 @@ jobs:
       with:
         distribution: temurin
         java-version: ${{matrix.java}}
+    - uses: 'google-github-actions/auth@v2'
+      with:
+        credentials_json: '${{ secrets.SPANNER_CASSANDRA_ADAPTER_CICD_SERVICE_ACCOUNT }}'
     - run: java -version
     - run: .kokoro/build.sh
       env:
