--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,26 @@
                 <scope>runtime</scope>
             </dependency>
             <dependency>
+                <groupId>io.opentelemetry</groupId>
+                <artifactId>opentelemetry-api</artifactId>
+                <version>1.47.0</version>
+            </dependency>
+            <dependency>
+                <groupId>io.opentelemetry</groupId>
+                <artifactId>opentelemetry-sdk</artifactId>
+                <version>1.47.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.cloud.opentelemetry</groupId>
+                <artifactId>detector-resources-support</artifactId>
+                <version>0.33.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.cloud.opentelemetry</groupId>
+                <artifactId>exporter-metrics</artifactId>
+                <version>0.33.0</version>
+            </dependency>
+            <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-inline</artifactId>
                 <version>4.11.0</version>
