--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,12 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
+                <groupId>org.apache.httpcomponents.client5</groupId>
+                <artifactId>httpclient5</artifactId>
+                <version>5.3.1</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
                 <groupId>com.google.cloud</groupId>
                 <artifactId>google-cloud-spanner-cassandra</artifactId>
                 <version>0.4.1-SNAPSHOT</version> <!-- {x-version-update:google-cloud-spanner-cassandra:current} -->
