chore: Add multithreaded integration test. (#199)

--- a/.github/workflows/daily-integration.yml
+++ b/.github/workflows/daily-integration.yml
@@ -32,6 +32,7 @@ jobs:
         JOB_TYPE: integration-spanner
         INTEGRATION_TEST_INSTANCE: ${{secrets.INTEGRATION_TEST_INSTANCE}}
         SPANNER_ENDPOINT: ${{secrets.SPANNER_DEVEL_ENDPOINT}}
+        GOOGLE_SPANNER_CASSANDRA_LOG_SERVER_ERRORS: true
     
   notify_on_failure:
     runs-on: ubuntu-latest
