--- a/google-cloud-spanner-cassandra/pom.xml
+++ b/google-cloud-spanner-cassandra/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.google.cloud</groupId>
     <artifactId>google-cloud-spanner-cassandra</artifactId>
     <packaging>jar</packaging>
+    <name>Google Cloud Spanner Cassandra</name>
     <version>0.6.0</version><!-- {x-version-update:google-cloud-spanner-cassandra:current} -->
     <parent>
         <groupId>com.google.cloud</groupId>
