ci: Enable built-in metrics for the Adapter in NoSQLBench workflow (#230)
Also update the permissions for the job to be able to create issues for failures, and increase the job timeout to reduce noise.

--- a/.github/workflows/nosqlbench-benchmark.yml
+++ b/.github/workflows/nosqlbench-benchmark.yml
@@ -14,7 +14,10 @@ env:
 jobs:
   nosqlbench_benchmark:
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    permissions:
+      contents: read
+      issues: write
+    timeout-minutes: 60
     strategy:
       # Do not cancel other jobs in the matrix if one fails. This ensures that a
       # failure in the 'devel' environment does not prevent the 'prod' benchmark from running.
